# quick_fast_api

./: README.md  pyproject.toml
proj2/: main.py
